--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,33 @@
 cmake_minimum_required(VERSION 3.14)
 project(SimpleTriangle C)
 
-# Find Vulkan
-find_package(Vulkan REQUIRED)
+# Explicitly set C standard to avoid C++ modules
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_C_STANDARD_REQUIRED ON)
+set(CMAKE_C_EXTENSIONS OFF)
 
 # Enable FetchContent
 include(FetchContent)
+
+# Declare Vulkan-Headers
+FetchContent_Declare(
+    vulkan_headers
+    GIT_REPOSITORY https://github.com/KhronosGroup/Vulkan-Headers.git
+    GIT_TAG vulkan-sdk-1.4.313.0 # Stable tag
+    GIT_SHALLOW TRUE
+)
+# Disable C++ module support
+set(VULKAN_HEADERS_ENABLE_MODULE OFF CACHE BOOL "" FORCE)
+FetchContent_MakeAvailable(vulkan_headers)
+
+# Declare Vulkan-Loader
+FetchContent_Declare(
+    vulkan_loader
+    GIT_REPOSITORY https://github.com/KhronosGroup/Vulkan-Loader.git
+    GIT_TAG vulkan-sdk-1.4.313.0 # Stable tag
+    GIT_SHALLOW TRUE
+)
+FetchContent_MakeAvailable(vulkan_loader)
 
 # Declare GLFW
 FetchContent_Declare(
@@ -14,6 +36,10 @@ FetchContent_Declare(
     GIT_TAG 3.4
     GIT_SHALLOW TRUE
 )
+set(DOXYGEN_SKIP_DOT TRUE CACHE BOOL "" FORCE)
+set(GLFW_BUILD_EXAMPLES FALSE CACHE BOOL "" FORCE)
+set(GLFW_BUILD_TESTS FALSE CACHE BOOL "" FORCE)
+set(GLFW_BUILD_DOCS FALSE CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(glfw)
 
 # Configure GLFW options
@@ -26,7 +52,7 @@ set(GLFW_VULKAN_STATIC OFF CACHE BOOL "" FORCE)
 FetchContent_Declare(
     cglm
     GIT_REPOSITORY https://github.com/recp/cglm.git
-    GIT_TAG v0.9.4
+    GIT_TAG v0.9.6
     GIT_SHALLOW TRUE
 )
 FetchContent_MakeAvailable(cglm)
@@ -39,17 +65,19 @@ add_executable(${APP_NAME} src/main.c)
 # Link libraries
 target_link_libraries(${APP_NAME} PRIVATE
     glfw
-    Vulkan::Vulkan
+    vulkan
     cglm
 )
 
 # Include directories
 target_include_directories(${APP_NAME} PRIVATE
-    ${Vulkan_INCLUDE_DIRS}
+    ${vulkan_headers_SOURCE_DIR}/include
     ${cglm_SOURCE_DIR}/include
 )
 
-# Shader compilation
+# Shader compilation with glslc from Vulkan SDK
+set(VULKAN_SDK "C:/VulkanSDK/1.4.313.0")
+set(GLSLC "${VULKAN_SDK}/Bin/glslc.exe")
 set(SHADER_SRC
     ${CMAKE_SOURCE_DIR}/shaders/shader.vert
     ${CMAKE_SOURCE_DIR}/shaders/shader.frag
@@ -59,7 +87,7 @@ foreach(SHADER ${SHADER_SRC})
     set(SHADER_SPV "${CMAKE_BINARY_DIR}/shaders/${SHADER_NAME}.spv")
     add_custom_command(
         OUTPUT ${SHADER_SPV}
-        COMMAND ${Vulkan_GLSLC_EXECUTABLE} ${SHADER} -o ${SHADER_SPV}
+        COMMAND ${GLSLC} ${SHADER} -o ${SHADER_SPV}
         DEPENDS ${SHADER}
         COMMENT "Compiling ${SHADER_NAME} to SPIR-V"
     )
